--- a/package.json
+++ b/package.json
@@ -34,6 +34,10 @@
     "@fortawesome/fontawesome-svg-core": "^7.1.0",
     "@fortawesome/free-brands-svg-icons": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@fullcalendar/angular": "^6.1.19",
+    "@fullcalendar/core": "^6.1.19",
+    "@fullcalendar/daygrid": "^6.1.19",
+    "@fullcalendar/interaction": "^6.1.19",
     "@tailwindcss/postcss": "^4.1.16",
     "ngx-toastr": "^19.1.0",
     "postcss": "^8.5.6",
