--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@fullcalendar/daygrid": "^6.1.19",
     "@fullcalendar/interaction": "^6.1.19",
     "@tailwindcss/postcss": "^4.1.16",
+    "date-fns": "^4.1.0",
     "ngx-toastr": "^19.1.0",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
@@ -50,6 +51,7 @@
     "@angular/build": "^20.3.8",
     "@angular/cli": "^20.3.8",
     "@angular/compiler-cli": "^20.3.0",
+    "@types/date-fns": "^2.5.3",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
