--- a/angular.json
+++ b/angular.json
@@ -14,22 +14,26 @@
           "builder": "@angular/build:application",
           "options": {
             "browser": "src/main.ts",
-            "polyfills": [
-              "zone.js"
-            ],
+            "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "assets": [
               {
                 "glob": "**/*",
-                "input": "public",
+                "input": "public"
+              },
+              {
+                "glob": "_redirects",
+                "input": "src/assets",
                 "output": "/"
               }
             ],
             "styles": [
-             "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
-             "node_modules/ngx-toastr/toastr.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
+              "node_modules/ngx-toastr/toastr.css",
               "src/styles.css"
-            ]
+            ],
+            "outputPath": "dist/SmartShift",
+            "index": "src/index.html"
           },
           "configurations": {
             "production": {
@@ -73,10 +77,7 @@
         "test": {
           "builder": "@angular/build:karma",
           "options": {
-            "polyfills": [
-              "zone.js",
-              "zone.js/testing"
-            ],
+            "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
               {
